@@ -1,3 +1,8 @@
+2008-10-04  Gautier Portet  <kassoulet gmail com>
+
+	* src/soundconverter.py: Fix crash at startup when more than one
+	  encoding format is missing. (thanks Denis)
+
 2008-09-22  Gautier Portet  <kassoulet gmail com>
 
 	* src/soundconverter.py: Fix problem with underscores in dest folder
